--- a/poly-lang.cabal
+++ b/poly-lang.cabal
@@ -69,7 +69,7 @@ executable poly-lang
       base          >=4.13 && <4.14
     , poly-source   >=0.1.0.0
     , poly-lang     >=0.1.0.0
-    , fused-effects >=1.0.2.0
+    , fused-effects ^>=1.0.2.0
 
 test-suite poly-lang-doctest
   import:         common
@@ -96,13 +96,13 @@ test-suite poly-lang-tests
       base
     , containers
     , transformers
-    , fused-effects  >= 1.0.2.0
+    , fused-effects  ^>= 1.0.2.0
     , poly-lang      >= 0.1.0.0
     , hedgehog       >= 1.0.2
     , hedgehog-fn    >= 1
-    , tasty          >= 1.3.1
-    , tasty-hedgehog >= 1.0.0.2
-    , tasty-hunit    >= 0.10.0.2
+    , tasty          ^>= 1.3.1
+    , tasty-hedgehog ^>= 1.0.0.2
+    , tasty-hunit    ^>= 0.10.0.2
 
 source-repository head
   type:     git
