--- a/poly-lang.cabal
+++ b/poly-lang.cabal
@@ -98,11 +98,11 @@ test-suite poly-lang-tests
     , transformers
     , fused-effects  ^>= 1.0.2.0
     , poly-lang      >= 0.1.0.0
-    , hedgehog       >= 1.0.2
-    , hedgehog-fn    >= 1
-    , tasty          ^>= 1.3.1
-    , tasty-hedgehog ^>= 1.0.0.2
-    , tasty-hunit    ^>= 0.10.0.2
+    , hedgehog       ^>= 1
+    , hedgehog-fn    ^>= 1
+    , tasty          ^>= 1.2
+    , tasty-hedgehog ^>= 1
+    , tasty-hunit    ^>= 0.10
 
 source-repository head
   type:     git
