--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-haskell@v1
       with:
-        ghc-version: '8.8.2'
+        ghc-version: '8.8.3'
         cabal-version: '3.0'
 
     - name: Cache
@@ -33,8 +33,8 @@ jobs:
     - name: Install dependencies
       run: |
         cabal update
-        cabal build --only-dependencies --enable-tests --enable-benchmarks
+        cabal v2-build --only-dependencies --enable-tests --enable-benchmarks
     - name: Build
-      run: cabal build --enable-tests --enable-benchmarks all
+      run: cabal v2-build --enable-tests --enable-benchmarks all
     - name: Run tests
-      run: cabal test all
+      run: cabal v2-test all
