--- a/poly-lang.cabal
+++ b/poly-lang.cabal
@@ -69,7 +69,7 @@ executable poly-lang
       base          >=4.13 && <4.14
     , poly-source   >=0.1.0.0
     , poly-lang  
-    , fused-effects ^>=1.0.2.0
+    , fused-effects
 
 test-suite poly-lang-doctest
   import:         common
@@ -80,7 +80,7 @@ test-suite poly-lang-doctest
       base
     , doctest    >=0.7 && <1.0
     , QuickCheck
-    , poly-lang
+    , poly-lang 
 
 test-suite poly-lang-tests
   import:         common
