--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -35,6 +35,6 @@ jobs:
         cabal update
         cabal v2-build --only-dependencies --enable-tests --enable-benchmarks
     - name: Build
-      run: cabal v2-build --enable-tests --enable-benchmarks all
+      run: cabal v2-build --enable-tests --enable-benchmarks --project-file=cabal.project.ci poly-lang
     - name: Run tests
-      run: cabal v2-test all
+      run: cabal v2-test --project-file=cabal.project.ci all
