--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -35,6 +35,6 @@ jobs:
         cabal update
         cabal v2-build --only-dependencies --enable-tests --enable-benchmarks
     - name: Build
-      run: cabal v2-build --enable-tests --enable-benchmarks --project-file=cabal.project.ci poly-lang
+      run: cabal v2-build --enable-tests --enable-benchmarks --project-file=cabal.project.ci polylang
     - name: Run tests
       run: cabal v2-test --project-file=cabal.project.ci all
