--- a/poly-lang.cabal
+++ b/poly-lang.cabal
@@ -53,7 +53,7 @@ library
     , poly-source   >=0.1.0.0
     , fused-effects >=1.0.2.0
 
-executable poly-lang
+executable polylang
   import:           common
   main-is:          Main.hs
   default-language: Haskell2010
